# Secure-actix-web-server

./: Cargo.toml  LICENSE  README.md
cert-files/: cert.pem  key.pem
src/: main.rs
tests/: integration_test.rs
